--- a/data/characters/player.yaml
+++ b/data/characters/player.yaml
@@ -37,10 +37,10 @@ bodyParts:
     currentAction: ""
     isCovered: true
 clothing:
-  - 高领紧身衣:
-      covers:
-        - 胸部
-  - 黑色短裤:
-      covers:
-        - 阴茎
-        - 臀部
+  高领紧身衣:
+    covers:
+      胸部
+  黑色短裤:
+    covers:
+      阴茎
+      臀部
