--- a/data/actions/kiss.yaml
+++ b/data/actions/kiss.yaml
@@ -15,11 +15,11 @@ gentle_kiss:
   conditions:
       all:
         - type: "bodyPart"
-          owner: "actor"
+          owner: actor
           bodyPart: "嘴"
           isOccupied: false
         - type: "bodyPart"
-          owner: "target"
+          owner: target
           bodyPart: "嘴"
           isOccupied: false
 
@@ -54,13 +54,14 @@ deep_kiss:
   conditions:
     all:
       - type: "state"
+        owner: target
         state: "性欲"
         min: 10
       - type: "bodyPart"
-        owner: "actor"
+        owner: actor
         bodyPart: "嘴"
         isOccupied: false
       - type: "bodyPart"
-        owner: "target"
+        owner: targets
         bodyPart: "嘴"
         isOccupied: false
