--- a/data/characters/player.yaml
+++ b/data/characters/player.yaml
@@ -9,19 +9,19 @@ bodyParts:
   表情:
     isOccupied: false
     currentAction: ""
-    isCovered: true
+    isCovered: false
   嘴:
     isOccupied: false
     currentAction: ""
-    isCovered: true
+    isCovered: false
   左手:
     isOccupied: false
     currentAction: ""
-    isCovered: true
+    isCovered: false
   右手:
     isOccupied: false
     currentAction: ""
-    isCovered: true
+    isCovered: false
   阴茎:
     isOccupied: false
     currentState: "未勃起"
