--- a/data/actions/kiss.yaml
+++ b/data/actions/kiss.yaml
@@ -31,7 +31,7 @@ deep_kiss:
       state:
         性欲: +5
         体感: +5
-        开放度: +5
+        开放: +5
   #      clothing:
   #        None
       bodyParts:
@@ -41,21 +41,21 @@ deep_kiss:
       bodyParts:
         嘴:
           isOccupied: true
-    description: 
-      start:
-        - "{actor}把嘴巴压在{target}的唇上轻轻撕咬，用牙齿有些强硬地撬开他的嘴，将湿润的舌头探入他的口中，拨弄他的口腔内部。你感到他的鼻息变重了，身体也开始不安分地扭来扭去。"
-        - "“把嘴张开。”{actor}命令道。{target}迟疑了一下，但乖乖地照做了。他顺从地闭上眼，微微抬起头，让{actor}心中升起一股愉悦的满足感。{actor}有些粗暴地拉起他的下巴，贪婪地品尝着他的顺从。"
-      continue:
-        - "{actor}的舌头在{target}的口中游走，偶尔泄露出一声被欲望催生出的轻哼，让他感到一阵阵的颤栗。"
-        - "{actor}暂时放开了{target}的嘴，看了看他羞红了的脸。“真可爱。”{actor}说着，又将这个吻继续下去。"
-        - "{actor}和{target}谁也不愿意先分开，你们共享着彼此炽热的呼吸，共同沉浸在这一刻的浪漫中。"
-      end:
-        - "{actor}和{target}分开时，唾液在你们的唇间留下了一道细细的银线，{target}显然也注意到了这一点，他的脸羞得通红，什么话都说不出来。"
+  description: 
+    start:
+      - "{actor}把嘴巴压在{target}的唇上轻轻撕咬，用牙齿有些强硬地撬开他的嘴，将湿润的舌头探入他的口中，拨弄他的口腔内部。你感到他的鼻息变重了，身体也开始不安分地扭来扭去。"
+      - "“把嘴张开。”{actor}命令道。{target}迟疑了一下，但乖乖地照做了。他顺从地闭上眼，微微抬起头，让{actor}心中升起一股愉悦的满足感。{actor}有些粗暴地拉起他的下巴，贪婪地品尝着他的顺从。"
+    continue:
+      - "{actor}的舌头在{target}的口中游走，偶尔泄露出一声被欲望催生出的轻哼，让他感到一阵阵的颤栗。"
+      - "{actor}暂时放开了{target}的嘴，看了看他羞红了的脸。“真可爱。”{actor}说着，又将这个吻继续下去。"
+      - "{actor}和{target}谁也不愿意先分开，你们共享着彼此炽热的呼吸，共同沉浸在这一刻的浪漫中。"
+    end:
+      - "{actor}和{target}分开时，唾液在你们的唇间留下了一道细细的银线，{target}显然也注意到了这一点，他的脸羞得通红，什么话都说不出来。"
   conditions:
     all:
       - type: "state"
         owner: target
-        state: "性欲"
+        state: "开放"
         min: 10
       - type: "bodyPart"
         owner: actor
