--- a/data/actions/speech.yaml
+++ b/data/actions/speech.yaml
@@ -1,6 +1,6 @@
 express_love:
   name: "表达爱意"
-  canContinue: false
+  isContinuous: false
   possibleBodyParts:
     - 嘴
   effects:
@@ -27,7 +27,7 @@ express_love:
 
 scold:
   name: "责骂"
-  canContinue: false
+  isContinuous: false
   possibleBodyParts:
     - 嘴
   effects:
