--- a/data/actions/index.yaml
+++ b/data/actions/index.yaml
@@ -4,4 +4,5 @@ express_love: speech.yaml
 scold: speech.yaml
 caress: movements.yaml
 licking: movements.yaml
+handjob: movements.yaml
 blowjob: movements.yaml
