--- a/data/characters/partner.yaml
+++ b/data/characters/partner.yaml
@@ -1,9 +1,13 @@
 name: 佐音
 state: 
-  性欲: 0
-  体感: 0 #后期进行调整
+  性欲: 10
+  体感: 50
   开放: 0
 bodyParts:
+  头发:
+    isOccupied: false
+    currentState: "绑住"
+    isCovered: false
   表情:
     isOccupied: false
     currentAction: ""
