--- a/data/actions/movements.yaml
+++ b/data/actions/movements.yaml
@@ -220,11 +220,11 @@ frot:
     start:
       - 你将自己赤裸的分身同佐音的贴在一起，用腹部挤压着。这算不上有多舒服，但是佐音看上去很喜欢这种可以和你大面积紧贴的姿势，他积极地配合着你。
       - 你们用阴茎磨蹭着彼此，你的下体传来一阵阵温暖的快感，这让你想到你们第一次做爱时佐音青涩的样子，那个时候他还一脸懵懂，根本不知道你在做什么。而现在，看着他依旧羞涩的表情和熟练起来的动作，你觉得非常满足。
-      - 你们的胯部交叠着，一同绕着对方的阴茎画圈。佐音摆动臀部的样子性感极了，让你看得浑身燥热。你感到自己越发地硬了。
+      - 你们的胯部交叠着，一同绕着对方的阴茎打转。佐音摆动臀部的样子性感极了，让你看得浑身燥热。你感到自己越发地硬了。他可能也发现了，弯起嘴角腼腆又有点得意地笑了笑。
   conditions:
     all:
       - type: "bodyPart"
-        owner: owner
+        owner: actor
         bodyPart: "阴茎"
         isOccupied: false
         isCovered: false
@@ -252,8 +252,8 @@ sixty_nine:
         阴茎:
           isOccupied: true
       state:
-        性欲: +10
-        体感: +10
+        性欲: +8
+        体感: +8
     actor:
       bodyParts:
         嘴:
