--- a/data/actions/index.yaml
+++ b/data/actions/index.yaml
@@ -3,7 +3,7 @@ deep_kiss: kiss.yaml
 express_love: speech.yaml
 scold: speech.yaml
 caress: movements.yaml
-release_hair: movements.yaml
+untie_hair: movements.yaml
 licking: movements.yaml
 handjob: movements.yaml
 blowjob: movements.yaml
