--- a/data/actions/movements.yaml
+++ b/data/actions/movements.yaml
@@ -33,7 +33,7 @@ caress:
         bodyPart: "右手"
         isOccupied: false
 
-release_hair:
+untie_hair:
   name: "散开{partner}的头发"
   isContinous: False
   possibleBodyParts:
@@ -76,8 +76,8 @@ licking:
   effects:
     target:
       state:
-        性欲: +7
-        体感: +7
+        性欲: +6
+        体感: +6
         开放: +5
     actor:
       bodyParts:
@@ -113,9 +113,9 @@ handjob:
   effects:
     target:
       state:
-        性欲: +15
-        体感: +10
-        开放: +10
+        性欲: +8
+        体感: +6
+        开放: +6
       bodyParts:
         阴茎:
           isOccupied: true 
@@ -129,7 +129,7 @@ handjob:
     continue:
       - "{actor}熟悉{target}的身体，当然也包括他的阴茎。{actor}灵巧的手指触动着每一个他有感觉的地方，很快，前精从他的铃口溢出，可爱极了。"
       - "{actor}握住{target}的龟头，用手指肚在马口处按摩，并时不时尝试探入。这种更像是在折磨的行为让{target}发出介于痛苦和快乐之间的呻吟。"
-      - "“{actorNickname}……你的手，真漂亮……”{target}呢喃着望向{actor}触碰着他的手，{actor}能看出他无比享受{actor}手上的动作，这也让{actor}欣喜若狂。"
+      - "“{actorNickname}……你的手，真漂亮……”{target}呢喃着望向{actor}紧握着他阴茎的手，{actor}能看出他无比享受{actor}手上的动作，这也让{actor}欣喜若狂。"
     end:
       - "{actor}把{actBodyPart}从{target}的阴茎上放开，{target}张张嘴想说什么，但是忍住了。他的阴茎在{actor}的刺激之下高昂着头。"
   conditions:
@@ -165,9 +165,9 @@ blowjob:
   effects:
     target:
       state:
-        性欲: +10
-        体感: +10
-        开放: +10
+        性欲: +8
+        体感: +8
+        开放: +6
       bodyParts:
         阴茎:
           isOccupied: true
@@ -181,7 +181,7 @@ blowjob:
     continue:
       - "{actor}熟练地用嘴巴套弄着{target}的鸡巴。它个头很大，强迫{actor}张大嘴巴，下巴都有些发酸。但{actor}并不介意，{actor}享受着{target}的反应，享受着这种被动的快感。"
       - "阴茎在{actor}的嘴里进进出出，{actor}故意让它发出咕啾咕啾的声音，本就淫荡的行为因此变得更加刺激。{target}显然也听到了，{actor}能看到他的耳朵变得通红。"
-      - "{actorNickname}，{actorNickname}，我……我好舒服……”{target}的声音破碎又凌乱，“啊啊……”他刻意压低呻吟声，不让声音传出这个房间。但这让{actor}更加兴奋，加快了吞吐的节奏。"
+      - "“{actorNickname}，{actorNickname}，我……我好舒服……”{target}的声音破碎又凌乱，“啊啊……”他刻意压低呻吟声，不让声音传出这个房间。但这让{actor}更加兴奋，加快了吞吐的节奏。"
     end:
       - "{actor}突然停下了口中的动作，抬头吐出了{target}的阴茎看向他。他的阴茎还处于勃起的状态，湿润而红润，他的眼睛里满是欲望。\n“为什么……”他脱口而出，“为什么停下来？”但他没有继续说下去，为自己主动的索取而感到羞愧。"
   conditions:
@@ -189,6 +189,10 @@ blowjob:
       - type: "state"
         owner: target
         state: "开放"
+        min: 50
+      - type: "state"
+        owner: target
+        state: "性欲"
         min: 50
       - type: "bodyPart"
         owner: actor
