Add 'hair_pull' action; refine speech descriptions and enhance UI interactions; improve game turn handling and event feedback

--- a/data/actions/index.yaml
+++ b/data/actions/index.yaml
@@ -8,4 +8,5 @@ licking: movements.yaml
 handjob: movements.yaml
 blowjob: movements.yaml
 frot: movements.yaml
+hair_pull: movements.yaml
 #sixty_nine: movements.yaml
