--- a/data/actions/kiss.yaml
+++ b/data/actions/kiss.yaml
@@ -16,9 +16,10 @@ gentle_kiss:
         精神: +5
   description:
     start:
-      - "{actor}轻轻地吻了{target}的唇，他的嘴唇柔软而温暖，让{actor}感到一阵阵的幸福。"
+      - "{actor}轻轻地吻了{target}的唇，他的嘴唇柔软而温暖，让{actor}觉得很幸福。"
       - "{actor}的吻像蝴蝶一样轻轻落在{target}的唇上，转瞬又离开。{target}咯咯地笑起来：“好痒啊。”"
-      - "{actor}凑到{target}面前在他唇上落下一吻。让{actor}没想到的是，{target}模仿着{actor}的样子，略带羞涩地靠近并回了一个吻。在那之后，他根本不敢看{actor}的眼睛。"
+      - "{actor}凑到{target}面前在他唇上落下一吻。{target}模仿着{actor}的样子，略带羞涩地靠近并回了一个吻。在那之后，他根本不敢看{actor}的眼睛。"
+      - "{actor}贴近佐音的脸，亲了一下他的额头，然后是他的鼻尖，接下来是脸颊。“……我好喜欢你。”{target}微笑着，低声对{actor}说，于是{actor}把吻印在了他的嘴唇上，吃下这句甜蜜的情话。"
   conditions:
       all:
         - type: "bodyPart"
@@ -58,7 +59,7 @@ deep_kiss:
       - "“把嘴张开。”{actor}命令道。{target}迟疑了一下，但乖乖地照做了。他顺从地闭上眼，微微抬起头，让{actor}心中升起一股愉悦的满足感。{actor}有些粗暴地拉起他的下巴，贪婪地品尝着他的顺从。"
     continue:
       - "{actor}的舌头在{target}的口中游走，偶尔泄露出一声被欲望催生出的轻哼，让他感到一阵阵的颤栗。"
-      - "{actor}暂时放开了{target}的嘴，看了看他羞红了的脸。“真可爱。”{actor}说，又将这个吻继续下去。{target}因为你的夸赞似乎更兴奋了，忍不住呻吟了一小声。"
+      - "{actor}暂时放开了{target}的嘴，看了看他的脸。他的表情明显沉浸在深吻带来的愉悦中。\n“真可爱。”{actor}说，又将这个吻继续下去。{target}因为你的夸赞似乎更兴奋了，忍不住发出了一小声呻吟。"
       - "{actor}和{target}谁也不愿意先分开，你们共享着彼此炽热的呼吸，共同沉浸在这一刻的浪漫中。"
     end:
       - "{actor}和{target}分开时，唾液在你们的唇间留下了一道细细的银线，{target}显然也注意到了这一点，他的脸羞得通红，什么话都说不出来。"
