--- a/data/actions/movements.yaml
+++ b/data/actions/movements.yaml
@@ -13,6 +13,8 @@ caress:
       bodyParts:
         actBodyPart:
           isOccupied: true
+      state:
+        体感: +1
   description:
     start:
       - "{actor}轻轻摩挲着{target}的皮肤，{target}乖乖地感受着{actor}的触摸，看上去他似乎很喜欢。"
@@ -20,6 +22,8 @@ caress:
       - "{actor}在{target}的背上画着圈，这让{target}的身体微微颤抖，无意识地配合着{actor}的抚摸。"
     continue:
       - "{actor}继续爱抚着{target}的身体，{target}的脸上泛起了一丝红晕，他的眼睛里闪烁着期待的光芒。"
+      - "{actor}继续爱抚着{target}的身体，{target}像小狗一样去蹭{actor}的手。"
+      - "{actor}继续爱抚着{target}的身体，他的体温让{actor}觉得很舒服。"
     end:
       - "{actor}的{actBodyPart}不再抚摸{target}的身体，{target}的脸上依然残留着红晕，他的眼睛里闪过一丝失落。"
   conditions:
@@ -45,7 +49,7 @@ untie_hair:
         体感: +3
       bodyParts:
         头发:
-          currentState: “散开”
+          currentState: "散开"
     actor:
       state:
         精神: +3
@@ -85,12 +89,12 @@ licking:
           isOccupied: true
   description:
     start:
-      - "{actor}轻轻地舔舐着{target}的皮肤，唾液湿润了他的身体，{target}因为这过于淫靡的景象而有些不知所措，干脆闭上了眼睛。"
-      - "{actor}的舌头在{target}的耳朵边游走，{target}的身体蜷缩起来。{actor}知道他的耳朵有多敏感，于是变本加厉地舔舐着，直到他不受控制地发出呜咽声。"
+      - "{actor}轻轻地舔舐着{target}的皮肤，唾液湿润了他的身体，{target}有些不知所措，干脆闭上了眼睛。"
+      - "{actor}的舌头在{target}的耳朵边游走，{target}的身体蜷缩起来。{actor}知道这里是他的弱点，于是变本加厉地舔舐着，直到他不受控制地发出呜咽声。"
       - "{actor}舔舐着{target}的脖颈，留下一道道湿润的痕迹，{target}不自然地呼吸着，他咬紧了嘴唇，仿佛在忍受着什么。"
     continue:
-      - "{actor}继续饥渴地舔舐着{target}，就像对待一块美味的糖果一样。{target}开始哀求{actor}停下来。"
-      - "{target}的皮肤是如此柔软，{actor}不愿意就这么放手，{actor}的舌头在他的身体上游走打转，品尝着每一寸皮肤。{target}扭动着身体，不知是想迎合{actor}，还是想要躲开。"
+      - "{actor}继续饥渴地舔舐着{target}，好像他是一块美味的糖果。{target}开始哀求{actor}停下来。"
+      - "{target}的皮肤是如此柔软，{actor}不愿意就这么放手，{actor}的舌头在他的身体上游走打转。{target}扭动着身体，不知是想迎合{actor}，还是想要躲开。"
     end:
       - "{actor}停下了舔舐，但{target}仍然没有回过神来，他的身体还在不自觉地扭动。过了一会儿，他才意识到自己的失态，脸上泛起一丝羞愧。"
   conditions:
@@ -127,11 +131,12 @@ handjob:
     start:
       - "{actor}伸出{actBodyPart}去抚摸{target}的阴茎。{actor}能感觉到那里似乎比往常还要硬，{actor}捏了捏，让{target}发出一声闷哼。\n{actor}温柔地绕着柱身摸了一圈，然后有节奏地上下撸动起来。"
     continue:
-      - "{actor}熟悉{target}的身体，当然也包括他的阴茎。{actor}灵巧的手指触动着每一个他有感觉的地方，很快，前精从他的铃口溢出，可爱极了。"
-      - "{actor}握住{target}的龟头，用手指肚在马口处按摩，并时不时尝试探入。这种更像是在折磨的行为让{target}发出介于痛苦和快乐之间的呻吟。"
-      - "“{actorNickname}……你的手，真漂亮……”{target}呢喃着望向{actor}紧握着他阴茎的手，{actor}能看出他无比享受{actor}手上的动作，这也让{actor}欣喜若狂。"
+      - "{actor}细长又灵巧的手指触动着每一个他最敏感的地方，很快，透明的前精从他的尿道口溢出来，看上去像是露水，可爱极了。\n“你湿了。”{actor}告诉{target}，用手指沾了一些给他看。他别过脸去不肯看。"
+      - "{actor}握住{target}的龟头，用手指肚在马口处按摩，时不时尝试探入。这种更像是在折磨的行为让{target}发出介于痛苦和快乐之间的呻吟。\n{actor}忍不住加重了手上的动作，直到他开始向{actor}求饶。"
+      - "{actor}熟练地撸动着{target}的阴茎，能感觉到手下的触感越来越硬，越来越温热。\n“{actorNickname}……你的手，真漂亮……”{target}痴痴着望着{actor}紧握着他阴茎的手。\n{actor}故意把手上的动作放慢并做得更明显，他看上去很受用。"
     end:
       - "{actor}把{actBodyPart}从{target}的阴茎上放开，{target}张张嘴想说什么，但是忍住了。他的阴茎在{actor}的刺激之下高昂着头。"
+      - "{actor}松开了{actBodyPart}，活动了一下手腕。“呃……”{target}的肉棒高高竖立着，他轻微地摆动着臀部，渴望地看着{actor}，希望{actor}能继续下去。"
   conditions:
     all:
       - type: "state"
@@ -177,10 +182,11 @@ blowjob:
           isOccupied: true
   description:
     start:
-      - "{actor}俯下身子，好让嘴巴贴近{target}的阴茎。他发现了{actor}要做什么，羞得把脸埋在臂弯里。他的阴茎却硬挺着表达热情，似乎在邀请{actor}的嘴唇。\n{actor}张开嘴，轻轻地吻了一下龟头，然后有技巧地含住了它。\n“啊……{actorNickname}……”{target}在此刻无法控制自己的声音，他忘情地呼唤着{actor}。"
+      - "{actor}俯下身子，好让嘴巴贴近{target}的阴茎。他发现了{actor}要做什么，羞得把脸埋在臂弯里。他的阴茎却硬挺着表达热情，似乎在邀请{actor}的嘴唇。\n{actor}张开嘴，轻轻地吻了一下龟头，然后温柔地含住了它。\n“啊……{actorNickname}……”{target}在此刻无法控制自己的声音，他忘情地呼唤着{actor}。"
+      - "{target}的阴茎孤零零地立着，{actor}低下头，吸吮掉它分泌出的前精，味道有点咸。\n“……别这样……”{actor}听到{target}说。\n“别哪样？嗯？”{actor}装傻，“我没听懂。”\n“……不要吸……那里……”他轻轻地求{actor}。\n他的声音太软了，{actor}内心的渴望却被狠狠地撩拨着，使{actor}按捺不住把这根肉棒往嘴里吞。\n虽然看不到他的脸，但{actor}能听到他含混地呻吟：“呃……不，{actorNickname}……唔唔……”"
     continue:
-      - "{actor}熟练地用嘴巴套弄着{target}的鸡巴。它个头很大，强迫{actor}张大嘴巴，下巴都有些发酸。但{actor}并不介意，{actor}享受着{target}的反应，享受着这种被动的快感。"
-      - "阴茎在{actor}的嘴里进进出出，{actor}故意让它发出咕啾咕啾的声音，本就淫荡的行为因此变得更加刺激。{target}显然也听到了，{actor}能看到他的耳朵变得通红。"
+      - "{actor}熟练地用嘴巴套弄着{target}的阴茎。它个头很大，强迫{actor}张大嘴巴，下巴都有些发酸。但{actor}并不介意，{actor}享受着{target}的反应，有一种被动的快感。"
+      - "阴茎在{actor}的嘴里进进出出，{actor}故意让它发出咕啾咕啾的声音，本就淫荡的行为因此变得更加刺激。{target}显然也听到了，虽然头发挡住了他的脸，但{actor}能看到他的耳朵变得通红。"
       - "“{actorNickname}，{actorNickname}，我……我好舒服……”{target}的声音破碎又凌乱，“啊啊……”他刻意压低呻吟声，不让声音传出这个房间。但这让{actor}更加兴奋，加快了吞吐的节奏。"
     end:
       - "{actor}突然停下了口中的动作，抬头吐出了{target}的阴茎看向他。他的阴茎还处于勃起的状态，湿润而红润，他的眼睛里满是欲望。\n“为什么……”他脱口而出，“为什么停下来？”但他没有继续说下去，为自己主动的索取而感到羞愧。"
@@ -222,9 +228,9 @@ frot:
         精神: +5
   description:
     start:
-      - 你将自己赤裸的分身同佐音的贴在一起，用腹部挤压着。这算不上有多舒服，但是佐音看上去很喜欢这种可以和你大面积紧贴的姿势，他积极地配合着你。
-      - 你们用阴茎磨蹭着彼此，你的下体传来一阵阵温暖的快感，这让你想到你们第一次做爱时佐音青涩的样子，那个时候他还一脸懵懂，根本不知道你在做什么。而现在，看着他依旧羞涩的表情和熟练起来的动作，你觉得非常满足。
-      - 你们的胯部交叠着，一同绕着对方的阴茎打转。佐音摆动臀部的样子性感极了，让你看得浑身燥热。你感到自己越发地硬了。他可能也发现了，弯起嘴角腼腆又有点得意地笑了笑。
+      - "{actor}将自己赤裸的分身同{target}的贴在一起，用腹部挤压着。这算不上有多舒服，但是{target}看上去很喜欢和{actor}紧贴着，他积极地配合着{actor}。"
+      - "你们用阴茎磨蹭着彼此，{actor}的下体传来一阵阵温暖的快感，这让{actor}想到你们第一次做爱时{target}青涩的样子，那个时候他还一脸懵懂，根本不知道{actor}在做什么。而现在，看着他依旧羞涩的表情和熟练起来的动作，{actor}觉得非常满足。"
+      - "你们的胯部交叠着，一同绕着对方的阴茎磨蹭着。{target}摆动臀部的样子性感极了，让{actor}看得浑身燥热。{actor}感到自己越发地硬了。\n他可能也发现了，弯起嘴角腼腆又有点得意地笑了笑。"
   conditions:
     all:
       - type: "bodyPart"
@@ -241,6 +247,66 @@ frot:
         owner: target
         state: "开放"
         min: 40
+
+hair_pull:
+  name: 拽{partner}的头发
+  isContinous: False
+  possibleBodyParts:
+    - 左手
+    - 右手
+  effects:
+    target:
+      state:
+        性欲: -8
+        体感: -5
+        开放: -6
+    actor:
+      state:
+        性欲: +3
+        精神: -2
+  description:
+    start:
+      - "你被佐音躲闪的眼神激怒了，一把抓住佐音的长发，强迫他的脸对着你：“你在看哪呢？”\n你手上的力度有点大，他露出了痛苦的表情：“好痛……放开我好吗？”\n你猛然意识到自己的不对劲，马上松了手，佐音立刻就抱住了你：“你还好吗？”他没有一句怨言，但这却反而刺痛了你的心。"  
+      - "佐音浓密的金发在你们的动作中变得凌乱，你心中突然涌起一种莫名的冲动，用{actBodyPart}揪住了他的头发，将他的脸狠狠按在了床上。\n“阿伦……发……放开……”他含混不清地说，你却完全不在乎地继续按着，看着他狼狈的样子，直到你不由自主地笑出声。\n你被自己的笑声吓到清醒过来，连忙放开手查看佐音的状态。还好，他只是脸色有些涨红了。\n“抱歉……”你把头抵在他的胸膛忏悔，佐音轻声安慰着你。"
+  conditions:
+    all:
+      - type: "state"
+        owner: actor
+        state: "精神"
+        max: 50
+      - type: "bodyPart"
+        owner: target
+        bodyPart: "头发"
+        currentState: "散开"
+    any:
+      - type: "bodyPart"
+        owner: actor
+        bodyPart: "左手"
+        isOccupied: false
+      - type: "bodyPart"
+        owner: actor
+        bodyPart: "右手"
+        isOccupied: false
+
+# WIP
+choke:
+  name: 掐住脖子
+  possibleBodyParts:
+    - 左手
+    - 右手
+  effects:
+    target:
+      state:
+        性欲: -3
+        体感: -8
+    actor:
+      state:
+        性欲: +3
+        精神: -2
+        体感: -3
+  description:
+    start:
+      - "你用{actBodyPart}卡住佐音的脖子，他没有制止你。"  
 
 sixty_nine:
   name: 和{partner}相互口交
@@ -299,8 +365,8 @@ sixty_nine:
         isCovered: false
   description:
     start:
-      - "你的兴奋感越来越膨胀，普通的亲热已经满足不了你。“躺好了。”你把佐音推倒在床上，然后调转过身子。\n佐音看懂了你的动作，一时间手足无措起来。\n“你不喜欢？”你问。\n“不是，这个动作也太……”\n他的脸涨得通红，你故意用阴茎去磨蹭他的脸，让他更加不知所措。\n“你……你太色情了。”他说。\n“到底要不要做？”你不耐烦地问，然后用嘴对准了他的鸡巴，“想做就好好含着，像这样。”\n你一口含住了他巨大的阴茎，为了让他感受到更多刺激，你让这根肉棒直直地插到了喉咙。佐音“啊”地大叫了一声，然后没了声音。\n你看不到他的脸，正在奇怪他怎么样了的时候，下体传来一阵温热的濡湿感。\n佐音正在用舌头搅拌你的龟头。\n这感觉，真不错……"
+      - "{actor}的兴奋感越来越膨胀，普通的亲热已经满足不了{actor}。“躺好了。”{actor}把{target}推倒在床上，然后调转过身子。\n{target}看懂了{actor}的动作，一时间手足无措起来。\n“你不喜欢？”{actor}问。\n“不是，这个动作也太……”\n他的脸涨得通红，{actor}故意用阴茎去磨蹭他的脸，让他更加不知所措。\n“你……你太色情了。”他说。\n“到底要不要做？”{actor}不耐烦地问，然后用嘴对准了他的鸡巴，“想做就好好含着，像这样。”\n{actor}一口含住了他巨大的阴茎，为了让他感受到更多刺激，{actor}让这根肉棒直直地插到了喉咙。{target}“啊”地大叫了一声，然后没了声音。\n{actor}看不到他的脸，正在奇怪他怎么样了的时候，下体传来一阵温热的濡湿感。\n{target}正在用舌头搅拌{actor}的龟头。\n这感觉，真不错……"
     continue:
-      - "你们卖力地含着对方的性具，用柔软的嘴唇和舌头给对方带来快感。你轮流舔舐着这根鸡巴上所有你知道的敏感点，但说实话有些力不从心了，因为你的下体一直在让你分心。\n不只是阴茎，就连睾丸也被他握在手里揉捏着，这让你的身体忍不住颤抖。\n他什么时候开始做得这么好？你不知道，但你享受着这个事实。"
+      - "你们卖力地含着对方的性具，用柔软的嘴唇和舌头给对方带来快感。{actor}轮流舔舐着这根鸡巴上所有{actor}知道的敏感点，但说实话有些力不从心了，因为{actor}的下体一直在让{actor}分心。\n不只是阴茎，就连睾丸也被他握在手里揉捏着，这让{actor}的身体忍不住颤抖。\n他什么时候开始做得这么好？{actor}不知道，但{actor}享受着这个事实。"
     end:
-      - "在你的攻势下，佐音逐渐松开了你的阴茎，因为他已经彻底沉浸在你口腔的触感里，放肆地浪叫着，无暇顾及为你口交。恐怕连他自己也没有意识到。\n你得意地放开了他。"
+      - "在{actor}的攻势下，{target}逐渐松开了{actor}的阴茎，因为他已经彻底沉浸在{actor}口腔的触感里，放肆地浪叫着，无暇顾及为{actor}口交。恐怕连他自己也没有意识到。\n{actor}得意地放开了他。"
